--- a/templates/characters/character_details.html.twig
+++ b/templates/characters/character_details.html.twig
@@ -1,35 +1,34 @@
 {% extends 'base.html.twig' %}
-
 {% block body %}
 
-    <div class="character-detail">
-        <div class="character-main">
+    <div class="details">
+        <div class="details-main">
 
-            <div class="character-image">
+            <div class="details-image">
                 <img src="{{ character.thumbnail }}" alt="{{ character.name }}">
             </div>
 
-            <div class="character-info">
+            <div class="details-info">
                 <h1>{{ character.name }}</h1>
                 <p class="description">{{ character.description }}</p>
-
             </div>
-
         </div>
 
         {% if character.series is not empty %}
-            <h2>Serie</h2>
-            {% for serie in character.series %}
-                <a href="/series/{{ serie.marvelId }}-{{ serie.title |slug|lower }}">
-                    <div class="character-card">
+
+            <h2>Series</h2>
+            <div class="details-serie-list">
+                {% for serie in character.series %}
+                    <a class="details-serie-card"
+                       href="/series/{{ serie.marvelId }}-{{ serie.title |slug|lower }}">
                         <img src="{{ serie.thumbnail ?: asset('assets/images/no-img.jpg') }}"
                              alt="{{ serie.title }}">
                         <h3>{{ serie.title }}</h3>
-                    </div>
-                </a>
-            {% endfor %}
+                    </a>
+                {% endfor %}
+            </div>
+
         {% endif %}
     </div>
-
 
 {% endblock %}
