--- a/templates/series/serie_details.html.twig
+++ b/templates/series/serie_details.html.twig
@@ -44,7 +44,9 @@
                             <a href="/comics/{{ comic.marvelId }}-{{ comic.title|slug|lower }}">
                                 <img src="{{ comic.thumbnail ?: asset('assets/images/no-img.jpg') }}"
                                      alt="{{ comic.title }}"></a>
+                            <div class="card-infos">
                             <p>{{ comic.title }}</p>
+                            </div>
                         </div>
 
                     {% endif %}
@@ -62,7 +64,9 @@
                     <div class="details-character-card">
                         <a href="/characters/{{ character.marvelId }}-{{ character.name |slug|lower }}">
                             <img src="{{ character.thumbnail }}" alt="{{ character.name }}">
-                            <p>{{ character.name }}</p>
+                            <div class="card-infos">
+                                <p>{{ character.name }}</p>
+                            </div>
                         </a>
                     </div>
 
