--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -87,7 +87,6 @@ h1, h2 {
     position: relative;
     width: 100%;
     max-width: 280px;
-    max-height: 280px;
     text-align: center;
     background: #111;
     border: 1px solid #333;
@@ -101,7 +100,7 @@ h1, h2 {
     height: 410px;
 }
 
-.character-card {
+.character-card , .details-character-card{
     height: 280px;
 }
 
