feat(banner): add href on banner for homepage

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,10 @@
 <header>
     <!-- Bannière image -->
     <div class="banner">
-        <img src="{{ asset('assets/images/marvel-banner.png') }}" alt="Marvel Banner" class="img-fluid w-100">
+        <a href="{{ path('front_home') }}">
+            <img src="{{ asset('assets/images/marvel-banner.png') }}" alt="Marvel Banner" class="img-fluid w-100">
+        </a>
+
     </div>
 
     <!-- Navbar -->
