--- a/templates/comics/_list.html.twig
+++ b/templates/comics/_list.html.twig
@@ -25,7 +25,7 @@
     {% if totalPages > 0 %}
         {% if currentPage > 1 %}
             <a class="previous-button" href="{{ path(routeName, queryParams | merge({'page': currentPage - 1})) }}"
-               data-page="{{ currentPage - 1 }}">« Previous</a>
+               data-page="{{ currentPage - 1 }}">«</a>
         {% endif %}
 
         {% for p in startPage..endPage %}
@@ -38,7 +38,7 @@
 
         {% if currentPage < totalPages %}
             <a class="next-button" href="{{ path(routeName, queryParams | merge({'page': currentPage + 1})) }}"
-               data-page="{{ currentPage + 1 }}">Next »</a>
+               data-page="{{ currentPage + 1 }}">»</a>
         {% endif %}
         {% if currentPage < totalPages %}
             <a href="{{ path(routeName, queryParams | merge({'page':  totalPages})) }}" data-page="{{ totalPages }}">...Last</a>
